# iscore-addon-network

./: CMakeLists.txt  IpDialog.hpp  IpWidget.hpp  NetworkApplicationPlugin.cpp  NetworkApplicationPlugin.hpp  iscore_addon_network.cpp  iscore_addon_network.hpp  iscore_plugin_network.cpp  iscore_plugin_network.hpp  score_addon_network.cpp  score_addon_network.hpp
DistributedScenario/: Group.cpp  Group.hpp  GroupManager.cpp  GroupManager.hpp  GroupManagerSerialization.cpp  GroupMetadata.cpp  GroupMetadata.hpp  GroupMetadataSerialization.cpp  GroupMetadataWidget.cpp  GroupMetadataWidget.hpp  GroupSerialization.cpp
DistributedScenario/Commands/: AddClientToGroup.cpp  AddClientToGroup.hpp  ChangeGroup.cpp  ChangeGroup.hpp  CreateGroup.cpp  CreateGroup.hpp  DistributedScenarioCommandFactory.cpp  DistributedScenarioCommandFactory.hpp  RemoveClientFromGroup.cpp  RemoveClientFromGroup.hpp
DistributedScenario/Panel/: GroupPanelDelegate.cpp  GroupPanelDelegate.hpp  GroupPanelFactory.cpp  GroupPanelFactory.hpp
DistributedScenario/Panel/Widgets/: GroupHeaderItem.hpp  GroupListWidget.cpp  GroupListWidget.hpp  GroupTableWidget.cpp  GroupTableWidget.hpp  GroupWidget.cpp  GroupWidget.hpp  SessionHeaderItem.hpp
DocumentPlugins/: NetworkClientDocumentPlugin.cpp  NetworkClientDocumentPlugin.hpp  NetworkDocumentPlugin.cpp  NetworkDocumentPlugin.hpp  NetworkDocumentPluginSerialization.cpp  NetworkMasterDocumentPlugin.cpp  NetworkMasterDocumentPlugin.hpp  PlaceholderNetworkPolicy.cpp  PlaceholderNetworkPolicy.hpp
Netpit/: MessageContext.cpp  MessageContext.hpp  Netpit.cpp  Netpit.hpp  NetpitAudio.hpp  NetpitMessage.hpp  NetpitVideo.hpp
Network/: IpDialog.cpp  IpDialog.hpp  IpWidget.cpp  IpWidget.hpp  NetworkApplicationPlugin.cpp  NetworkApplicationPlugin.hpp  PlayerPlugin.cpp  PlayerPlugin.hpp
Network/Client/: Client.hpp  ClientSerialization.cpp  LocalClient.cpp  LocalClient.hpp  RemoteClient.hpp
Network/Communication/: MessageMapper.cpp  MessageMapper.hpp  MessageValidator.cpp  MessageValidator.hpp  NetworkMessage.cpp  NetworkMessage.hpp  NetworkServer.cpp  NetworkServer.hpp  NetworkSocket.cpp  NetworkSocket.hpp
Network/Document/: ClientPolicy.cpp  ClientPolicy.hpp  DocumentPlugin.cpp  DocumentPlugin.hpp  DocumentPluginSerialization.cpp  MasterPolicy.cpp  MasterPolicy.hpp  NTP.cpp  NTP.hpp  PlaceholderPolicy.cpp  PlaceholderPolicy.hpp  Timekeeper.hpp
Network/Document/Execution/: BasicPruner.cpp  BasicPruner.hpp  Context.hpp  DateExpression.cpp  DateExpression.hpp  FreeScenarioPolicy.cpp  FreeScenarioPolicy.hpp  MasterPolicy.cpp  MasterPolicy.hpp  MixedScenarioPolicy.cpp  MixedScenarioPolicy.hpp  SharedCompensatedExpressions.hpp  SharedExpressions.hpp  SharedNonCompensatedExpressions.hpp  SharedScenarioPolicy.cpp  SharedScenarioPolicy.hpp  SlavePolicy.cpp  SlavePolicy.hpp  SyncMode.hpp
Network/Group/: Group.cpp  Group.hpp  GroupManager.cpp  GroupManager.hpp  GroupManagerSerialization.cpp  GroupMetadata.cpp  GroupMetadata.hpp  GroupMetadataSerialization.cpp  GroupMetadataWidget.cpp  GroupMetadataWidget.hpp  GroupSerialization.cpp  NetworkActions.hpp
Network/Group/Commands/: AddClientToGroup.cpp  AddClientToGroup.hpp  AddCustomMetadata.cpp  AddCustomMetadata.hpp  ChangeGroup.cpp  ChangeGroup.hpp  CreateGroup.cpp  CreateGroup.hpp  DistributedScenarioCommandFactory.cpp  DistributedScenarioCommandFactory.hpp  RemoveClientFromGroup.cpp  RemoveClientFromGroup.hpp  RemoveGroup.hpp
Network/Group/Panel/: GroupPanelDelegate.cpp  GroupPanelDelegate.hpp  GroupPanelFactory.cpp  GroupPanelFactory.hpp
Network/Group/Panel/Widgets/: GroupHeaderItem.cpp  GroupHeaderItem.hpp  GroupListWidget.cpp  GroupListWidget.hpp  GroupTableCheckbox.cpp  GroupTableCheckbox.hpp  GroupTableWidget.cpp  GroupTableWidget.hpp  GroupWidget.cpp  GroupWidget.hpp  SessionHeaderItem.cpp  SessionHeaderItem.hpp
Network/Session/: ClientSession.cpp  ClientSession.hpp  ClientSessionBuilder.cpp  ClientSessionBuilder.hpp  MasterSession.cpp  MasterSession.hpp  PlayerSessionBuilder.cpp  PlayerSessionBuilder.hpp  RemoteClientBuilder.cpp  RemoteClientBuilder.hpp  Session.cpp  Session.hpp
Network/Settings/: NetworkSettings.hpp  NetworkSettingsModel.cpp  NetworkSettingsModel.hpp  NetworkSettingsPresenter.cpp  NetworkSettingsPresenter.hpp  NetworkSettingsView.cpp  NetworkSettingsView.hpp
Network/Settings/commands/: ClientNameChangedCommand.hpp  ClientPortChangedCommand.hpp  MasterPortChangedCommand.hpp
Repartition/client/: ClientSerialization.cpp
Repartition/session/: ClientSession.cpp  ClientSession.hpp  ClientSessionBuilder.cpp  ClientSessionBuilder.hpp  MasterSession.cpp  MasterSession.hpp  RemoteClientBuilder.cpp  RemoteClientBuilder.hpp  Session.cpp  Session.hpp
Serialization/: MessageValidator.cpp  NetworkMessage.cpp
Tests/Repartition/client/: CMakeLists.txt  main.cpp
Tests/Repartition/server/: CMakeLists.txt  main.cpp
settings_impl/: NetworkSettings.cpp  NetworkSettings.hpp  NetworkSettingsModel.cpp  NetworkSettingsModel.hpp  NetworkSettingsPresenter.cpp  NetworkSettingsPresenter.hpp  NetworkSettingsView.cpp  NetworkSettingsView.hpp
